[doc] Add hint for using aysnc execution in java.